- Cached names are now used for rerelease remapping, rather than erasure - Rerelease remapping now considers all album groups - Code maintenance